--- a/pages/index.html
+++ b/pages/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Document</title>
+    <title>LandingPage _ finsweet</title>
 </head>
 <body>
     
-    <h1>7 octoper </h1>
+    <h1> hello </h1>
 
-guerhgerhgerh
+
 
     <script src="../js/script.js"></script>
 </body>
