adding hero-sec

--- a/index.html
+++ b/index.html
@@ -3,15 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <title>LandingPage _ finsweet</title>
 </head>
 <body>
+    <!-- Home hero section -->
     
-    <h1> hello word </h1>
+    <div class="home_hero_sec">
+        <div class="container">
+            <nav class="navbar">
+                <h2 class="hero_title">{finsweet</h2>
+                <div class="hero_links">
+                    <ul>
+                        <li><a class="active" href="#">Home</a></li>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Features</a></li>
+                        <li><a href="#">pricing</a></li>
+                        <li><a href="#">FAQ</a></li>
+                        <li><a href="#">blog</a></li>
+                        <li><a class="hero_btn" href="#">contact us</a></li>
+                    </ul>
+                </div>
+            </nav>
+            <div class="hero_content">
+                <div class="r_sec">
+                    <h2>Building stellar websites for early startups</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                    <div class="btn">
+                        <div class="btn_1">view our work</div>
+                        <div class="btn_2"><span>view pricing <i class="fa-solid fa-arrow-right"></i></span></div>
+                    </div>
+                </div>
+                <div class="l_sec">
+                    <img src="/images/Illustration.png" alt="hero_content">
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Home hero section end -->
+    
 
 
-
+    <script src="js/all.min.js"></script>
     <script src="../js/script.js"></script>
 </body>
 </html>
