--- a/index.html
+++ b/index.html
@@ -240,6 +240,114 @@
             </div>
         </div>
       </div>
+    <!-- FAQ section end-->
+    <!-- contact section -->
+     <div class="contact-sec">
+        <div class="container">
+            <div class="row">
+                <div class="head">
+                    <div class="clear"></div>
+                    <!-- <img src="images/woman-writing-on-paper-3228878.png" alt="woman-writing-on-paper-3228878"> -->
+                    <div class="content">
+                        <h2>Building stellar websites for early startups</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore expedita magnam est, quidem natus quibusdam.</p>
+                    </div>
+                </div>
+                <div class="form-sec">
+                    <h2>Send inquiry</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.</p>
+                    <form>
+                        <input type="text" placeholder="your name">
+                        <input type="email" placeholder="Email">
+                        <input type="text" placeholder="Paste your Figma design URL">
+                        <button>Send an Inquiry</button>
+                    </form>
+                    <span>Get in touch with us <i class="fa-solid fa-arrow-right"></i></span>
+                </div>
+            </div>
+        </div>
+     </div>
+    <!-- contact section end -->
+    <!-- blog section -->
+     <div class="blog-sec">
+        <div class="container">
+            <h2>Our blog</h2>
+            <div class="row">
+                <div class="col">
+                    <img src="images/arabic-businessman-standing-on-street-and-using-laptop-9623794.png">
+                    <span>19 Jan 2022</span>
+                    <h3>How one Webflow user grew his single person consultancy from $0-100K in 14 months</h3>
+                    <p>See how pivoting to Webflow changed one person’s sales strategy and allowed him to attract</p>
+                    <a href="#">Read More</a>
+                    <i class="fa-solid fa-arrow-right"></i>
+                </div>
+                <div class="col m-5">
+                    <img src="images/woman-in-white-sleeveless-shirt-using-macbook-air-on-brown-wooden-table-3766189.png">
+                    <span>19 Jan 2022</span>
+                    <h3>How one Webflow user grew his single person consultancy from $0-100K in 14 months</h3>
+                    <p>See how pivoting to Webflow changed one person’s sales strategy and allowed him to attract</p>
+                    <a href="#">Read More</a>
+                    <i class="fa-solid fa-arrow-right"></i>
+                </div>
+                <div class="col">
+                    <img src="images/apple-monitors-326518.png">
+                    <span>19 Jan 2022</span>
+                    <h3>How one Webflow user grew his single person consultancy from $0-100K in 14 months</h3>
+                    <p>See how pivoting to Webflow changed one person’s sales strategy and allowed him to attract</p>
+                    <a href="#">Read More</a><i class="fa-solid fa-arrow-right"></i> 
+                </div>
+
+            </div>
+        </div>
+     </div>
+     <!-- blog section end -->
+      <!-- footer section -->
+       <footer class="footer-sec">
+        <div class="container">
+            <div class="row">
+                <div class="row1">
+                    <div class="col1">
+                            <img src="images/Logo.png" alt="logo">
+                        <p>We are always open to discuss your project and improve your online presence.</p>
+                        <div class="email">
+                            <span class="me">Email me at</span>
+                            <span class="us">Call us</span>
+                            <h4>contact@website.com</h4>
+                            <span class="num">0927 6277 28525</span>
+                        </div>
+                    </div>
+                    <div class="col2">
+                        <h2>Lets Talk!</h2>
+                        <p>We are always open to discuss your project, improve your online presence and help with your UX/UI design challenges.</p>
+                        <div class="social">
+                            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                            <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                            
+                        </div>
+                    </div>
+                    
+                </div>
+                <div class="row2">
+                    <div class="col1">
+                        <h3>Copyright 2022, Finsweet.com</h3>
+                    </div>
+                    <div class="col2">
+                        <ul>
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="pages/AboutUs.html">About us</a></li>
+                            <li><a href="pages/Features.html">Features</a></li>
+                            <li><a href="pages/Pricing.html">Pricing</a></li>
+                            <li><a href="pages/FAQ.html">FAQ</a></li>
+                            <li><a href="pages/blog.html">Blog</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+       </footer>
+
 
 
     <script src="js/all.min.js"></script>
