--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -46,15 +46,176 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
                 </div>
                 <div class="col2">
-                    <img src="../images/blog/group-of-people-sitting-indoors-3184360.png" alt="group-of-people-sitting-indoors-3184360">
+                    <img src="../images/aboutus/group-of-people-sitting-indoors-3184360.png" alt="group-of-people-sitting-indoors-3184360">
                 </div>
             </div>
         </div>
     </div>
     <!-- about us section end -->
+    <!-- who we are section -->
+     <div class="who-we-are-sec">
+        <div class="container">
+            <div class="row">
+                <div class="row1">
+                    <div class="col1">
+                        <h3>Who we are</h3>
+                        <h2>Goal focussed</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                    <div class="col2">
+                        <h3></h3>
+                        <h2>Continuous improvement</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                </div>
+                <div class="row2">
+                    <img src="../images/aboutus/man-in-blue-jacket-looking-at-white-board-7413916.png" alt="man-in-blue-jacket-looking-at-white-board-7413916">
+                </div>
+            </div>
+        </div>
+     </div>
+    <!-- who we are section end -->
+    <!-- progress section -->
+    <div class="progress-sec">
+        <div class="container">
+            <div class="row">
+                <h2>The process we follow</h2>
+                <div class="cards">
+                    <div class="card">
+                        <div class="line">
+                            <div class="circle"></div>
+                            <div class="line1"></div>
+                        </div>
+                        <h3>Planning</h3>
+                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+                    </div>
+                    <div class="card">
+                        <div class="line">
+                            <div class="circle"></div>
+                            <div class="line1"></div>
+                        </div>
+                        <h3>Conception</h3>
+                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+                    </div>
+                    <div class="card">
+                        <div class="line">
+                            <div class="circle"></div>
+                            <div class="line1"></div>
+                        </div>
+                        <h3>Design</h3>
+                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+                    </div>
+                    <div class="card">
+                        <div class="line">
+                            <div class="circle"></div>
+                            <div class="line1"></div>
+                        </div>
+                        <h3>Development</h3>
+                        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- progress section  end-->
+     <!-- our mission section -->
+      <div class="our-mission-sec">
+        <div class="container">
+            <div class="row">
+                <div class="row1">
+                    <div class="content">
+                        
+                        <h3>Our Mission </h3>
+                        <h2>Inspire, Innovate, Share</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                    <div class="image">
+                        <img src="../images/aboutus/a-man-standing-in-an-office-7792811.png" alt="a-man-standing-in-an-office-7792811">
+                    </div>
+                </div>
+                <div class="row2">
+                    <div class="image">
+                        <img src="../images/aboutus/photo-of-women-at-the-meeting-3810789.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3>Our Vision</h3>
+                        <h2>Laser focus</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+      </div>
+      <!-- our mission section end  -->
+      <!-- benifits section  -->
+       <div class="benifits-sec">
+        <div class="container">
+            <div class="row">
+                <h2>The benefits of working with us</h2>
+                <div class="cards">
+                    <div class="card">
+                        <a href="#"><i class="fa-regular fa-note-sticky"></i></a>
+                        <h3>Customize with ease</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim.</p>
+                    </div>
+                    <div class="card m-5">
+                        <a href="#"><i class="fa-regular fa-note-sticky"></i></a>
+                        <h3>Customize with ease</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim.</p>
+                    </div>
+                    <div class="card">
+                        <a href="#"><i class=".fa-regular fa-note-sticky"></i></a>
+                        <h3>Customize with ease</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim.</p>
+                    </div>
+                    
+                </div>
+                <div class="lego">
+                    <div class="lego-num">
+                        <h3>100.000+</h3>
+                        <span>Finsweet Users</span>
+                    </div>
+                    <div class="lego-wrab">
+                        <img src="../images/aboutus/Logo 5.png" alt="lego">
+                        <img src="../images/aboutus/Logo 5.png" alt="lego">
+                        <img src="../images/aboutus/Logo 5.png" alt="lego">
+                        <img src="../images/aboutus/Logo 5.png" alt="lego">
+                        <img src="../images/aboutus/Logo 5.png" alt="lego">
+                    </div>
+                </div>
+            </div>
+        </div>
+       </div>
+        <!-- benifits section  end-->
 
-
-
+       <!-- out team section -->
+        <div class="team-sec">
+            <div class="container">
+                <h2>Meet our team</h2>
+                <div class="cards">
+                    <div class="card">
+                        <img src="../images/aboutus/man-in-black-suit-holding-a-calling-card-3785104.png" alt="man-in-black-suit-holding-a-calling-card-3785104">
+                        <h3>John Smith</h3>
+                        <h4>CEO</h4>
+                    </div>
+                    <div class="card">
+                        <img src="../images/aboutus/man-in-black-suit-holding-a-calling-card-3785104.png" alt="man-in-black-suit-holding-a-calling-card-3785104">
+                        <h3>John Smith</h3>
+                        <h4>CEO</h4>
+                    </div>
+                    <div class="card">
+                        <img src="../images/aboutus/man-in-black-suit-holding-a-calling-card-3785104.png" alt="man-in-black-suit-holding-a-calling-card-3785104">
+                        <h3>John Smith</h3>
+                        <h4>CEO</h4>
+                    </div>
+                    <div class="card">
+                        <img src="../images/aboutus/man-in-black-suit-holding-a-calling-card-3785104.png" alt="man-in-black-suit-holding-a-calling-card-3785104">
+                        <h3>John Smith</h3>
+                        <h4>CEO</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
 
