--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -23,8 +23,8 @@
                 <h2 class="hero_title">{finsweet</h2>
                 <div class="hero_links">
                     <ul>
-                        <li><a target="_blank"  class="active" href="../index.html">Home</a></li>
-                        <li><a target="_blank"  href="pages/AboutUs.html">About Us</a></li>
+                        <li><a target="_blank"  href="../index.html">Home</a></li>
+                        <li><a target="_blank"  class="active" href="pages/AboutUs.html">About Us</a></li>
                         <li><a target="_blank"  href="pages/Features.html">Features</a></li>
                         <li><a target="_blank"  href="pages/Pricing.html">pricing</a></li>
                         <li><a target="_blank"  href="pages/FAQ.html">FAQ</a></li>
