--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <h2>Building stellar websites for early startups</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
                     <div class="btn">
-                        <div class="btn_1">view our work</div>
+                        <div class="btn_1"> <a target="_blank" href="/pages/outWork.html">view our work</a></div>
                         <div class="btn_2"><span>view pricing <i class="fa-solid fa-arrow-right"></i></span></div>
                     </div>
                 </div>
@@ -259,7 +259,7 @@
                         <input type="text" placeholder="your name">
                         <input type="email" placeholder="Email">
                         <input type="text" placeholder="Paste your Figma design URL">
-                        <button>Send an Inquiry</button>
+                        <button >Send an Inquiry</button>
                     </form>
                     <span>Get in touch with us <i class="fa-solid fa-arrow-right"></i></span>
                 </div>
