--- a/pages/AboutUs.html
+++ b/pages/AboutUs.html
@@ -25,11 +25,11 @@
                     <ul>
                         <li><a target="_blank"  href="../index.html">Home</a></li>
                         <li><a target="_blank"  class="active" href="pages/AboutUs.html">About Us</a></li>
-                        <li><a target="_blank"  href="pages/Features.html">Features</a></li>
-                        <li><a target="_blank"  href="pages/Pricing.html">pricing</a></li>
-                        <li><a target="_blank"  href="pages/FAQ.html">FAQ</a></li>
-                        <li><a target="_blank"  href="pages/blog.html">blog</a></li>
-                        <li><a target="_blank"  class="hero_btn" href="pages/contactus.html">contact us</a></li>
+                        <li><a target="_blank"  href="/Features.html">Features</a></li>
+                        <li><a target="_blank"  href="Pricing.html">pricing</a></li>
+                        <li><a target="_blank"  href="/FAQ.html">FAQ</a></li>
+                        <li><a target="_blank"  href="/blog.html">blog</a></li>
+                        <li><a target="_blank"  class="hero_btn" href="/contactus.html">contact us</a></li>
                     </ul>
                 </div>
             </nav>
