--- a/pages/outWork.html
+++ b/pages/outWork.html
@@ -10,9 +10,8 @@
     <!--  icons link-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- style link -->
-    <link rel="stylesheet" href="../css/all.min.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/blog.css">
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Finsweet</title>
 </head>
 <body>
@@ -37,29 +36,13 @@
         </div>
     </div>
     <!-- Home hero section end -->
-     <!-- case stady section -->
-      <div class="stady-sec">
-        <div class="container">
-            <div class="head">
-                <h2>a ux case study on creating a studious environment for students</h2>
-                <h3>andrew joson posted on 27th January</h3>
-            </div>
-            <div class="body-img">
-                <img src="../images/blog/man-in-blue-jacket-looking-at-white-board-7413916.png" alt="man-in-blue-jacket-looking-at-white-board-7413916">
-            </div>
-            <div class="foot">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis inventore libero officia, doloremque mollitia modi.</p>
-                <a href="#">read more</a>
-            </div>
-        </div>
-      </div>
     <!-- blog section -->
      <div class="blog-sec">
         <div class="container">
             <h2>Our blog</h2>
             <div class="row">
                 <div class="col">
-                    <img src="../images/home/arabic-businessman-standing-on-street-and-using-laptop-9623794.png">
+                    <img src="images/home/arabic-businessman-standing-on-street-and-using-laptop-9623794.png">
                     <span>19 Jan 2022</span>
                     <h3>How one Webflow user grew his single person consultancy from $0-100K in 14 months</h3>
                     <p>See how pivoting to Webflow changed one person’s sales strategy and allowed him to attract</p>
@@ -67,7 +50,7 @@
                     <i class="fa-solid fa-arrow-right"></i>
                 </div>
                 <div class="col m-5">
-                    <img src="../images/home/woman-in-white-sleeveless-shirt-using-macbook-air-on-brown-wooden-table-3766189.png">
+                    <img src="images/home/woman-in-white-sleeveless-shirt-using-macbook-air-on-brown-wooden-table-3766189.png">
                     <span>19 Jan 2022</span>
                     <h3>How one Webflow user grew his single person consultancy from $0-100K in 14 months</h3>
                     <p>See how pivoting to Webflow changed one person’s sales strategy and allowed him to attract</p>
@@ -75,33 +58,7 @@
                     <i class="fa-solid fa-arrow-right"></i>
                 </div>
                 <div class="col">
-                    <img src="../images/home/apple-monitors-326518.png">
-                    <span>19 Jan 2022</span>
-                    <h3>How one Webflow user grew his single person consultancy from $0-100K in 14 months</h3>
-                    <p>See how pivoting to Webflow changed one person’s sales strategy and allowed him to attract</p>
-                    <a target="_blank"  href="#">Read More</a><i class="fa-solid fa-arrow-right"></i> 
-                </div>
-
-            </div>
-            <div class="row">
-                <div class="col">
-                    <img src="../images/home/arabic-businessman-standing-on-street-and-using-laptop-9623794.png">
-                    <span>19 Jan 2022</span>
-                    <h3>How one Webflow user grew his single person consultancy from $0-100K in 14 months</h3>
-                    <p>See how pivoting to Webflow changed one person’s sales strategy and allowed him to attract</p>
-                    <a target="_blank"  href="#">Read More</a>
-                    <i class="fa-solid fa-arrow-right"></i>
-                </div>
-                <div class="col m-5">
-                    <img src="../images/home/woman-in-white-sleeveless-shirt-using-macbook-air-on-brown-wooden-table-3766189.png">
-                    <span>19 Jan 2022</span>
-                    <h3>How one Webflow user grew his single person consultancy from $0-100K in 14 months</h3>
-                    <p>See how pivoting to Webflow changed one person’s sales strategy and allowed him to attract</p>
-                    <a target="_blank"  href="#">Read More</a>
-                    <i class="fa-solid fa-arrow-right"></i>
-                </div>
-                <div class="col">
-                    <img src="../images/home/apple-monitors-326518.png">
+                    <img src="images/home/apple-monitors-326518.png">
                     <span>19 Jan 2022</span>
                     <h3>How one Webflow user grew his single person consultancy from $0-100K in 14 months</h3>
                     <p>See how pivoting to Webflow changed one person’s sales strategy and allowed him to attract</p>
