--- a/pages/blog.html
+++ b/pages/blog.html
@@ -10,10 +10,9 @@
     <!--  icons link-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- style link -->
-    <link rel="stylesheet" href="../css/all.min.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/blog.css">
-    <title>Finsweet</title>
+    <title>Blog page</title>
 </head>
 <body>
     <!-- Home hero section -->
@@ -24,12 +23,12 @@
                 <h2 class="hero_title">{finsweet</h2>
                 <div class="hero_links">
                     <ul>
-                        <li><a target="_blank"  class="active" href="#">Home</a></li>
+                        <li><a target="_blank"  href="../index.html">Home</a></li>
                         <li><a target="_blank"  href="pages/AboutUs.html">About Us</a></li>
                         <li><a target="_blank"  href="pages/Features.html">Features</a></li>
                         <li><a target="_blank"  href="pages/Pricing.html">pricing</a></li>
                         <li><a target="_blank"  href="pages/FAQ.html">FAQ</a></li>
-                        <li><a target="_blank"  href="pages/blog.html">blog</a></li>
+                        <li><a target="_blank"  class="active" href="pages/blog.html">blog</a></li>
                         <li><a target="_blank"  class="hero_btn" href="pages/contactus.html">contact us</a></li>
                     </ul>
                 </div>
@@ -41,22 +40,22 @@
       <div class="stady-sec">
         <div class="container">
             <div class="head">
-                <h2>a ux case study on creating a studious environment for students</h2>
+                <h1>a ux case study on creating a studious environment for students</h1>
                 <h3>andrew joson posted on 27th January</h3>
             </div>
             <div class="body-img">
-                <img src="../images/blog/man-in-blue-jacket-looking-at-white-board-7413916.png" alt="man-in-blue-jacket-looking-at-white-board-7413916">
+                <img src="../images/blog/people-working-in-front-of-computer-3182763.png" alt="blog-img">
             </div>
             <div class="foot">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis inventore libero officia, doloremque mollitia modi.</p>
-                <a href="#">read more</a>
+                <p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to twinkle. By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside.</p>
+                <a target="_blank" href="/pages/readBlog.html">read more</a>
             </div>
         </div>
       </div>
     <!-- blog section -->
      <div class="blog-sec">
         <div class="container">
-            <h2>Our blog</h2>
+            <h2 class="header">Our blog</h2>
             <div class="row">
                 <div class="col">
                     <img src="../images/home/arabic-businessman-standing-on-street-and-using-laptop-9623794.png">
@@ -118,7 +117,7 @@
             <div class="row">
                 <div class="row1">
                     <div class="col1">
-                            <img src="images/home/Logo.png" alt="logo">
+                            <img src="../images/home/Logo.png" alt="logo">
                         <p>We are always open to discuss your project and improve your online presence.</p>
                         <div class="email">
                             <span class="me">Email me at</span>
