--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <!--  icons link-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- style link -->
-    <link rel="stylesheet" href="css/all.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Finsweet</title>
 </head>
@@ -38,7 +37,7 @@
                     <h2>Building stellar websites for early startups</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
                     <div class="btn">
-                        <div class="btn_1"> <a target="_blank" href="/pages/outWork.html">view our work</a></div>
+                        <div class="btn_1"> <a target="_blank" href="/pages/ourWork.html">view our work</a></div>
                         <div class="btn_2"><span>view pricing <i class="fa-solid fa-arrow-right"></i></span></div>
                     </div>
                 </div>
