--- a/pages/ourWork.html
+++ b/pages/ourWork.html
@@ -10,9 +10,8 @@
     <!--  icons link-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- style link -->
-    <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <title>Finsweet</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <title>our Work</title>
 </head>
 <body>
     <!-- Home hero section -->
@@ -23,12 +22,12 @@
                 <h2 class="hero_title">{finsweet</h2>
                 <div class="hero_links">
                     <ul>
-                        <li><a target="_blank"  class="active" href="#">Home</a></li>
+                        <li><a target="_blank"  href="../index.html">Home</a></li>
                         <li><a target="_blank"  href="pages/AboutUs.html">About Us</a></li>
                         <li><a target="_blank"  href="pages/Features.html">Features</a></li>
                         <li><a target="_blank"  href="pages/Pricing.html">pricing</a></li>
                         <li><a target="_blank"  href="pages/FAQ.html">FAQ</a></li>
-                        <li><a target="_blank"  href="pages/blog.html">blog</a></li>
+                        <li><a target="_blank"  class="active" href="pages/blog.html">blog</a></li>
                         <li><a target="_blank"  class="hero_btn" href="pages/contactus.html">contact us</a></li>
                     </ul>
                 </div>
